@@ -4,6 +4,7 @@
 2. Fix read of tags during analysis phase.
 3. Check for multiple genre tags, and if found add as semi-colon separated
    list to DB.
+4. Multi-thread DB export.
 
 0.4.0
 -----
